[package]
name = "pallet-config"
description = "Pallet to manage chain wide configuration"
publish = false

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive", "serde"]}
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }
hex = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
sp-io = { workspace = true, features = ["default"] }
prediction-market-primitives = { workspace = true, features = ["mock", "default"] }
common-primitives = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-core/std",
	"log/std",
	"sp-std/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]