[dependencies]
arrayvec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
rand = { workspace = true, features = ["alloc", "std_rng"] }
rand_chacha = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
node-macros = { workspace = true }
prediction-market-primitives = { workspace = true }
pallet-pm-market-commons = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
pallet-balances = { workspace = true, features = ["default"] }
pallet-insecure-randomness-collective-flip = { workspace = true, features = ["default"] }
pallet-timestamp = { workspace = true, features = ["default"] }
pallet-treasury = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
prediction-market-primitives = { workspace = true, features = ["mock", "default"] }
common-primitives = { workspace = true }
test-case = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "prediction-market-primitives/std",
    "pallet-pm-market-commons/std",
]
try-runtime = [
    "frame-support/try-runtime",
]

[package]
authors = ["Zeitgeist PM <contact@zeitgeist.pm>"]
edition.workspace = true
name = "pallet-pm-court"

version = { workspace = true }
