[package]
name = "pallet-pm-eth-asset-registry"
description = "Registry for (foreign) assets"
repository = "https://github.com/open-web3-stack/open-runtime-module-library/tree/master/asset-registry"
license = "Apache-2.0"
authors = ["Interlay Ltd, Aventus"]
edition = "2021"

version = { workspace = true }

[dependencies]
log = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, optional = true }
parity-scale-codec = { workspace = true }

# substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

# orml
orml-traits = { workspace = true }
prediction-market-primitives = { workspace = true }

[dev-dependencies]
# substrate
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }


[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-traits/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"serde",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"prediction-market-primitives/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
