[package]
name = "pallet-node-manager"
description = "Pallet to manage nodes of the chain"
publish = false

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
frame-support = { workspace = true }
frame-system = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive", "max-encoded-len"] }
scale-info = { workspace = true, features = ["derive", "serde"]}
sp-avn-common = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-application-crypto = { workspace = true }
sp-core = { workspace = true }
sp-std = { workspace = true }
pallet-avn = { workspace = true }
common-primitives = { workspace = true }
prediction-market-primitives = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
pallet-balances = { workspace = true, features=["insecure_zero_ed", "default"] }
sp-state-machine = { workspace = true }
# pallet-timestamp = { workspace = true, features = ["default"] }
# test-case = { workspace = true }

[features]
default = ["std"]
std = [
	"scale-info/std",
	"parity-scale-codec/std",
	"sp-io/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"log/std",
	"sp-std/std",
	"frame-benchmarking?/std",
	"pallet-avn/std",
	"common-primitives/std",
	"prediction-market-primitives/std",
	"sp-avn-common/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]