[package]
name = "pallet-tnf-validators-manager"
description = "Manages the Truth network validators"
publish = false

version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }

[dependencies]
log = { version = "0.4.17", default-features = false }
codec = { package = "parity-scale-codec", version = "3.6.9", features = ["derive"], default-features = false }
scale-info = { version = "2.5.0", default-features = false, features = [
	"derive",
] }
serde = { version = "1.0.163", default-features = false, optional = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
hex-literal = { version = "0.4.1", default-features = false }
libsecp256k1 = { version = "0.7.0", default-features = false, features = [
	"hmac","static-context"
], optional = true }
rand = { version = "0.8.5", features = ["std_rng"], default-features = false, optional = true }
sha3 = { version = "0.8", default-features = false, optional = true }

sp-avn-common = { workspace = true }
pallet-avn = { workspace = true }

sp-std = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-core = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-state-machine = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

frame-support = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
frame-system = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-session = { features = [
	"historical",
], git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", optional = true }

[dev-dependencies]
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", features=["insecure_zero_ed"] }
parking_lot = { version = "0.12.0" }

substrate-test-utils = { default-features = false, git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
pallet-eth-bridge = { workspace = true }


[features]
default = ["std", "pallet-session/historical"]
std = [
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-std/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"sp-application-crypto/std",
	"frame-support/std",
	"frame-system/std",
	"sp-avn-common/std",
	"pallet-avn/std",
	"pallet-eth-bridge/std",
	"pallet-session/std",
	"libsecp256k1?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"rand",
	"libsecp256k1",
	"sha3",
]
try-runtime = ["frame-support/try-runtime"]